--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
+        "prettier": "^2.7.1",
+        "prettier-plugin-tailwindcss": "^0.1.13",
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "flowbite": "^1.5.3",
+        "tailwind-scrollbar": "^2.1.0-preview.0"
     }
 }
