--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.0",
         "alpinejs": "^3.10.4",
-        "autoprefixer": "^10.4.7",
+        "autoprefixer": "^10.4.13",
         "axios": "^0.27",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.14",
+        "postcss": "^8.4.18",
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
-        "tailwindcss": "^3.1.0",
+        "tailwindcss": "^3.2.2",
         "vite": "^3.1.8"
     },
     "dependencies": {
-        "flowbite": "^1.5.3",
+        "@alpinejs/persist": "^3.10.5",
+        "@preline/overlay": "^1.2.0",
+        "preline": "^1.2.1",
         "tailwind-scrollbar": "^2.1.0-preview.0"
     }
 }
