--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
+        "lorisleiva/laravel-actions": "^2.4",
         "rappasoft/laravel-livewire-tables": "^2.8",
         "staudenmeir/laravel-adjacency-list": "^1.0"
     },
@@ -23,7 +24,8 @@
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0",
-        "theanik/laravel-more-command": "^1.3"
+        "theanik/laravel-more-command": "^1.3",
+        "wulfheart/laravel-actions-ide-helper": "^0.3.0"
     },
     "autoload": {
         "psr-4": {
