--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "livewire/livewire": "^2.5",
         "lorisleiva/laravel-actions": "^2.4",
         "rappasoft/laravel-livewire-tables": "^2.8",
+        "spatie/laravel-permission": "^5.7",
         "staudenmeir/laravel-adjacency-list": "^1.0"
     },
     "require-dev": {
